--- a/css/styles.scss
+++ b/css/styles.scss
@@ -145,89 +145,89 @@ h3 {
 nav {
     display: flex;
     align-items: center;
-    justify-content: center;
-    text-align: center;
+    justify-content: space-evenly;
     background: $azul;
-    background: linear-gradient(to right, transparent, $azul, transparent);
-    padding: 20px 0;
+    box-shadow: 0 0 10px rgb(15,20,35);
     position: fixed;
-    bottom: 0;
+    bottom: -75px;
     z-index: 75;
     width: 100%;
     transition: .5s;
+
+    .item {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: white;
+        font-size: 8px;
+        font-weight: 300;
+        text-decoration: none;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        padding: 20px 0;
+        position: relative;
+        width: 100%;
+        transition: .5s;
+        cursor: pointer;
+
+        .icono { display: block; font-size: 12px }
+        .texto { display: none  }
+
+        &:hover { color: $dorado }
+
+        &::after {
+            content: "";
+            background: rgba(193,143,89,.15);
+            position: absolute;
+            top: 50%;
+            right: 0;
+            width: 1px;
+            height: 10px;
+            transform: translateY(-50%);
+        }
+
+        &:last-child::after { display: none }
+    }
 }
 
-/* Item */
-
-nav .item {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-right: .5px solid rgba(193,143,89,.25);
-    padding: 0 30px;
-    cursor: pointer;
-    transition: .5s;
-}
-
-nav .item:last-child {
-    border-right: none;
-}
-
-nav .item i {
-    color: white;
-}
-
-nav .item a {
-    display: none;
-    color: white;
-    font-size: 12px;
-    font-weight: normal;
-    text-decoration: none;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    transition: .5s;
-}
-
-nav .item:hover a {
-    color: $dorado;
-}
-
-nav .item a p {
-    font-size: 12px;
-    transition: .5s;
-}
-
-nav .item:hover a p {
-    color: $dorado;
-}
+// Mobile First
 
 @media only screen and (min-width: $mobile) {
-    nav .item {
-        padding: 0 40px;
-    }
-    nav .item i {
-        font-size: 25px;
+    nav {
+        justify-content: center;
+
+        .item {
+            padding: 20px 0;
+
+            .icono { display: none  }
+            .texto { display: block }
+
+            &::after {
+                height: 30px;
+            }
+        }
     }
 }
 
 @media only screen and (min-width: $tablet) {
     nav {
         background-color: rgba(45,50,65,.75);
-        padding: 40px 0;
+        box-shadow: none;
         top: 0;
-        bottom: initial;
-    }
-    nav .item i {
-        display: none;
-    }
-    nav .item a {
-        display: inline;
+        bottom: auto;
+
+        .item {
+            font-size: 10px;
+            padding: 40px;
+            width: auto;
+        }
     }
 }
 
-@media only screen and (min-width: 980px) {
-    nav .item a {
-        font-size: 15px;
+@media only screen and (min-width: $laptop) {
+    nav .item {
+        font-size: 12px;
+        font-weight: 400;
         letter-spacing: 5px;
     }
 }
@@ -412,7 +412,7 @@ header {
         &:hover { color: rgba(193,143,89,.75) !important; }
     }
 
-    .overlay { background: rgba(045,050,065,.25) }
+    .overlay { background: rgba(0,0,0,.5) }
 }
 
 // Mobile First
@@ -477,7 +477,7 @@ header {
         // LinkedIn
 
         .linkedin {
-            top: 150px;
+            top: 120px;
             bottom: auto;
             height: 65px;
             width: 65px;
@@ -674,14 +674,14 @@ header {
             align-items: center;
             justify-content: center;
             color: $texto;
-            font-size: 12px;
+            font-size: 10px;
             text-align: center;
             text-transform: uppercase;
             background: rgba(255,255,255,.75);
             background: linear-gradient(to left, rgba(255,255,255,.75), white, rgba(255,255,255,.75));
-            letter-spacing: 5px;
-            line-height: 25px;
-            padding: 25px;
+            letter-spacing: 2px;
+            line-height: 22px;
+            padding: 25px 15px;
             position: relative;
             z-index: 50;
             width: 100%;
@@ -700,6 +700,17 @@ header {
     .col-xs-12:nth-child(2) .item { background: white url(../img/experience/2.jpg) center no-repeat; background-size: cover }
     .col-xs-12:nth-child(3) .item { background: white url(../img/experience/3.jpg) center no-repeat; background-size: cover }
     .col-xs-12:nth-child(4) .item { background: white url(../img/experience/4.jpg) center no-repeat; background-size: cover }
+}
+
+// Mobile First
+
+@media only screen and (min-width: $mobile) {
+    #experiencia .item .empresa {
+        font-size: 12px;
+        letter-spacing: 5px;
+        line-height: 25px;
+        padding: 25px;
+    }
 }
 
 /* ──────────────── */
@@ -1276,6 +1287,7 @@ header {
 // ────────────── //
 
 footer {
+    margin-bottom: 50px;
     border-top: 1px dotted $dorado;
 
     .legal {
@@ -1320,6 +1332,20 @@ footer {
             background: url(../img/ruido.png) repeat center;
             opacity: .25;
         }
+    }
+}
+
+// Mobile First
+
+@media only screen and (min-width: $mobile) {
+    footer{
+        margin-bottom: 60px;
+    }
+}
+
+@media only screen and (min-width: $tablet) {
+    footer {
+        margin: 0;
     }
 }
 
@@ -1392,11 +1418,10 @@ footer {
     border-radius: 2px;
     position: fixed;
     bottom: 75px;
-    right: 25px;
+    right: -75px;
     z-index: 75;
     width: 50px;
     height: 50px;
-    opacity: 0;
     transition: .5s;
 
     &:visited {
@@ -1415,7 +1440,15 @@ footer {
     }
 }
 
+// Mobile First
+
 @media only screen and (min-width: $mobile) {
+    .top-button {
+        bottom: 75px;
+    }
+}
+
+@media only screen and (min-width: $tablet) {
     .top-button {
         bottom: 25px;
     }
